src/assets/styles/stylesModal/designModals.css
.contenedor-diagramaflujo-ejercicio1 {
    background: rgba(217, 217, 217, 0.5);
    border-radius: 75px;
    margin-left: 2vw;
    margin-right: 60vw;
}

.contenedor-diagramaflujo-ejercicio1 > h1 {
    color: white;
    margin-left: 2vw;
    font-size: 24px;
    padding: 10px;
}

.contenedor-diagramaflujo-ejercicio1-explicacion {
    background: rgba(217, 217, 217, 0.5);
    margin-left: 2vw;
    margin-right: 30vw;
}

.contenedor-diagramaflujo-ejercicio1-explicacion > h1 {
    color: white;
    text-align: justify;
    margin-left: 2vw;
    margin-right: 2vw;
    font-size: 20px;
    padding: 10px;
    margin-bottom: 20px;
}

.contenedor-diagramaflujo-ejercicio1-imagen-flex {
    display: flex;
    justify-content: flex-start;
    align-items: flex-start;
    flex-wrap: wrap;
    gap: 20px;
}

.contenedor-diagramaflujo-ejercicio1-imagen-flex > img {
    margin-left: 15px;
    height: 150px;
    width: 150px;
}

@media (max-width: 480px) {
    .contenedor-diagramaflujo-ejercicio1 > h1 {
        font-size: 16px; /* 1 rem 16 px */
    }

    .contenedor-diagramaflujo-ejercicio1-explicacion > h1 {
        font-size: 16px;
    }

    .contenedor-diagramaflujo-ejercicio1-imagen-flex > img {
        height: 80px;
        width: 80px;
    }
}

